# shapes-factory

./: .gitignore  asset-manifest.json  index.html  readme.md
shapes-backend/: README.md  dockerfile  hello.py  main.py  model_handler.py  pyproject.toml  wishlist.md
shapes-backend/src/: image_utils.py  model_handler.py
shapes-backend/src/config/: gunicorn.py
shapes-backend/src/shapes_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shapes-backend/test/: test_image_utils.py  test_model_handler.py  test_request.py
shapes-frontend/: .env  package-lock.json  package.json
shapes-frontend/src/: App.js  App.jsx  index.js  userId.js
shapes-frontend/src/components/: CanvasPanel.jsx  DrawingCanvas.jsx  InfoPanel.jsx  InputsPanel.jsx
static/css/: main.bac1f098.css  main.bac1f098.css.map
static/js/: 453.80e68248.chunk.js  453.80e68248.chunk.js.map  main.3c401463.js  main.3c401463.js.map  main.418db465.js  main.418db465.js.map  main.699a59b1.js  main.699a59b1.js.map  main.7094db57.js  main.7094db57.js.map  main.71d3fe38.js  main.71d3fe38.js.map  main.d87c99ea.js  main.d87c99ea.js.map  main.e396c58a.js  main.e396c58a.js.map  main.e435dea9.js  main.e435dea9.js.map  main.fe39b08f.js  main.fe39b08f.js.map
