[project]
name = "shapes-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "gradio>=5.31.0",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "torch>=2.2.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "numpy<2.0",
    "scipy>=1.15.3",
    "ipykernel>=6.29.5",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
